added logic and views for GetUserDetailsFromUserId

--- a/RogueOne/appsettings.json
+++ b/RogueOne/appsettings.json
@@ -8,7 +8,7 @@
   "ApiCredentials": {
     "RapidApiKey": "1f9f32c91dmsh076c85c4274a190p1f7bffjsn0dbda272506d",
     "RapidApiHost": "instagram-looter2.p.rapidapi.com",
-    "RapidApiUri": "https://instagram-looter2.p.rapidapi.com/id?username"
+    "RapidApiUri": "https://instagram-looter2.p.rapidapi.com/"
   },
   "AllowedHosts": "*"
 }
